test/sema/negative/subtyping1.output
subtyping1.impala:2 col 6: error: Wrong argument type; expected double but found int32
